--- a/Single Price Grid/css/style.css
+++ b/Single Price Grid/css/style.css
@@ -4,9 +4,13 @@
     font-family: 'Karla', sans-serif;
 }
 
-body {
+
+#main-content{
     display: flex;
+    height: 100vh;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .grid-container {
@@ -14,9 +18,8 @@ body {
     height: 500px;
     width: 750px;
     border-radius: 10px;
-    transform: translateY(12%);
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1.2fr;
+    grid-template-rows: 1fr 1fr;
     box-shadow: 5px 8px 21px -7px rgba(0,0,0,0.4);
 }
 
@@ -105,4 +108,40 @@ button {
     color: rgba(255, 255, 255, 0.575);
     font-weight: 500;
     margin-top: 20px;
+}
+
+/*media queries*/
+
+@media (min-width: 375px) and (max-width: 750px) {
+    #main-content{
+        justify-content: stretch;
+    }
+    .grid-container{
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .article-join, .article-price, .article-whyUs{
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+        padding: 1.5em;
+        box-sizing: border-box;
+    }
+
+    .text-join{
+        line-height: 2;
+    }
+    .text-whyUs{
+        line-height: 1.6;
+    }
+
+    button{
+        width: 17em;
+    }
 }
